# intervirt

./: .cxx_tags  .gitignore  .yavide_proj  .yavide_session  .ycm_extra_conf.py  CMakeLists.txt  LICENSE  README.md  cscope.files  tags
src/: CMakeLists.txt  kvmtest.cpp  test.cpp
src/common/: util.h
src/daemon/: RpcServer.cpp  RpcServer.h  abstractstubserver.h  daemon.cpp  server.cpp  server.h  server.spec  stubclient.h
src/drivers/: DriverFactory.cpp  DriverFactory.h  DriverManager.cpp  DriverManager.h  IDriver.cpp  IDriver.h  IDriverFactory.cpp  IDriverFactory.h
src/drivers/esx/: EsxDriver.cpp  EsxDriver.h  EsxFactory.cpp  EsxFactory.h
src/drivers/esx/api/: ApiObject.cpp  ApiObject.hpp  ApiObjectValue.cpp  ApiObjectValue.hpp  EsxApi.cpp  EsxApi.h  EsxApi.hpp
src/drivers/hyperv/: HypervCommon.cpp  HypervCommon.h  HypervDriverCommon.cpp  HypervDriverCommon.h  HypervDriverFactory.cpp  HypervDriverFactory.h  HypervDriverLegacy.cpp  HypervDriverLegacy.h  HypervDriverModern.cpp  HypervDriverModern.h  HypervFactory.cpp  HypervFactory.h
src/drivers/hyperv/wmi/: AbstractWmiObject.cpp  AbstractWmiObject.h  IWmiClass.h  WmiHelper.cpp  WmiHelper.h
src/drivers/hyperv/wmi/classes/: classes.json  generate_classes.py  hyperv_generator.py  test.json
src/drivers/hyperv/wmi/classes/common/: CIM_DataFile.cpp  CIM_DataFile.h  Win32_ComputerSystem.cpp  Win32_ComputerSystem.h  Win32_ComputerSystemProduct.cpp  Win32_ComputerSystemProduct.h  Win32_OperatingSystem.cpp  Win32_OperatingSystem.h  Win32_PerfRawData_HvStats_HyperVHypervisorVirtualProcessor.cpp  Win32_PerfRawData_HvStats_HyperVHypervisorVirtualProcessor.h  Win32_Processor.cpp  Win32_Processor.h  common.h
src/drivers/hyperv/wmi/classes/v1/: Msvm_AllocationCapabilities.cpp  Msvm_AllocationCapabilities.h  Msvm_ComputerSystem.cpp  Msvm_ComputerSystem.h  Msvm_ConcreteJob.cpp  Msvm_ConcreteJob.h  Msvm_DiskDrive.cpp  Msvm_DiskDrive.h  Msvm_Keyboard.cpp  Msvm_Keyboard.h  Msvm_MemorySettingData.cpp  Msvm_MemorySettingData.h  Msvm_ProcessorSettingData.cpp  Msvm_ProcessorSettingData.h  Msvm_ResourceAllocationSettingData.cpp  Msvm_ResourceAllocationSettingData.h  Msvm_SwitchPort.cpp  Msvm_SwitchPort.h  Msvm_SyntheticEthernetPortSettingData.cpp  Msvm_SyntheticEthernetPortSettingData.h  Msvm_VirtualHardDiskSettingData.cpp  Msvm_VirtualHardDiskSettingData.h  Msvm_VirtualSwitch.cpp  Msvm_VirtualSwitch.h  Msvm_VirtualSwitchManagementService.cpp  Msvm_VirtualSwitchManagementService.h  Msvm_VirtualSystemGlobalSettingData.cpp  Msvm_VirtualSystemGlobalSettingData.h  Msvm_VirtualSystemManagementService.cpp  Msvm_VirtualSystemManagementService.h  Msvm_VirtualSystemSettingData.cpp  Msvm_VirtualSystemSettingData.h  Win32OperatingSystem.cpp  Win32OperatingSystem.h  v1.h
src/drivers/hyperv/wmi/classes/v2/: Msvm_ComputerSystem.cpp  Msvm_ComputerSystem.h  Msvm_ConcreteJob.cpp  Msvm_ConcreteJob.h  Msvm_Keyboard.cpp  Msvm_Keyboard.h  Msvm_MemorySettingData.cpp  Msvm_MemorySettingData.h  Msvm_ProcessorSettingData.cpp  Msvm_ProcessorSettingData.h  Msvm_VirtualHardDiskSettingData.cpp  Msvm_VirtualHardDiskSettingData.h  Msvm_VirtualSystemManagementService.cpp  Msvm_VirtualSystemManagementService.h  Msvm_VirtualSystemSettingData.cpp  Msvm_VirtualSystemSettingData.h  v2.h
src/objects/: HypervisorConnection.cpp  HypervisorConnection.h  VirtualMachine.cpp  VirtualMachine.h
src/shell/: CommandManager.cpp  CommandManager.h  ICommand.cpp  ICommand.h  JsonTable.cpp  JsonTable.h  ShellContext.cpp  ShellContext.h  ShellUtil.h  colors.h  rpcclient.h  shell.cpp
src/shell/commands/: ListCommand.cpp  ListCommand.h
