cmake_minimum_required (VERSION 2.6)
project (intervirt C CXX)
set(CMAKE_VERBOSE_MAKEFILE off)
set(VERSION_MAJOR 0)
set(VERSION_MINOR 1)
set(VERSION_PATCH 0)

set(GENERAL_WARNING_FLAGS          "-Wall -Wextra -pedantic -Wno-unused-parameter -Wno-unused-variable -Wno-variadic-macros -Wno-gnu-zero-variadic-macro-arguments")
set(GENERAL_DEBUG_FLAGS            "-g")
set(GENERAL_RELEASE_FLAGS          "-mtune=native -DNDEBUG -O2 -fomit-frame-pointer")
set(GENERAL_COMPILER_FLAGS         "-pipe")
set(CMAKE_CXX_COMPILER             "clang++")
set(CMAKE_CXX_FLAGS                "-std=c++11 ${GENERAL_WARNING_FLAGS} ${GENERAL_COMPILER_FLAGS} -Wshadow -Weffc++ -fnon-call-exceptions -Wno-c99-extensions")
set(CMAKE_CXX_FLAGS_DEBUG          "${GENERAL_DEBUG_FLAGS}")
set(CMAKE_CXX_FLAGS_RELEASE        "${GENERAL_RELEASE_FLAGS}")
set(CMAKE_C_FLAGS                  "-std=c99 ${GENERAL_WARNING_FLAGS} ${GENERAL_COMPILER_FLAGS}")
set(CMAKE_C_FLAGS_DEBUG            "${GENERAL_DEBUG_FLAGS}")
set(CMAKE_C_FLAGS_RELEASE          "${GENERAL_RELEASE_FLAGS}")

#SET(CMAKE_FIND_LIBRARY_SUFFIXES ".a")
#SET(BUILD_SHARED_LIBRARIES OFF)
#SET(CMAKE_EXE_LINKER_FLAGS "-static")
set(CMAKE_EXE_LINKER_FLAGS_DEBUG   "")
set(CMAKE_EXE_LINKER_FLAGS_RELEASE "-s")
set(CMAKE_MODULE_PATH "${PROJECT_SOURCE_DIR}/cmake-extras/")
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${PROJECT_SOURCE_DIR}/bin)
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${PROJECT_SOURCE_DIR}/lib)
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${PROJECT_SOURCE_DIR}/lib)
find_package(Boost COMPONENTS system REQUIRED)
find_package(PkgConfig)
find_package(LibXml2 REQUIRED)
find_package(LibXML++ REQUIRED)
include_directories("/usr/include /usr/local/include")
link_directories("${PROJECT_SOURCE_DIR}/lib")
add_subdirectory(src/)
